index.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);

/*
TODO:
--> Get amp logos with high enough resolution that will not give highest quality results on any platform, but acceptable on most. Get 220 x 70

For the header, text on top of an image is what the big website guys are doing.
*/

.flexBox {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;  
    
    -webkit-flex-flow: row wrap;  
    
        -ms-flex-flow: row wrap;  
    
            flex-flow: row wrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
}

body{
    background: black;
    /*When there's padding on the left and right sides,
    when the browser is closed as much as it can go, the Amp
    logo gets cut off on the right side and not the left side
    so only pad on the top and bottom. A maybe-permanent shim*/
    margin-top: 20px;
    margin-bottom: 15px;
    margin-left: 0px;
    margin-right: 0px;
}

#logoLockup{
    
}

#logoImgContainer{
    display:inline-block;
}

#logoImgContainer img{
    width: 366px; 
    height: 116px;
    /*make sure that CSS and HTML agree on width and height always for everything
    width: 220px*/
}

@media all and (max-width: 366px) {
  #logoImgContainer img{
      max-width: 100%;
      
  }
}

#logoText{
    text-align: left;
    margin-left:20px;
    width:300px;
    /*position:relative;
    I'm sorry, this is hard-coded for now. I plan on getting the correct pixel number
    for this after the CMS is set up, etc. or, maybe an interactive dev version of the
    site.*/
    display:inline-block;
    color:#ccc;
    
    
}

.tile {
    width: 250px;
    height: 250px;
    margin: 16px;
    border-radius: 10px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.tile img {
    position: relative;
    /*center this in JavaScript*/
}

header {
    text-align: center;
    background: black;
}

.featureBorder {
    margin: 20px 16px;
    border: none;
    border-top: 1px solid #2e2e2e;
    height: 1px;
}

#featureSection{
    color:white;
}

#featureSectionBottomBorderContainer {
    margin:0px;
    padding:0px;
    width: 100%;
    height: auto;
}

footer {
    text-align: center;
}

nav{
    -webkit-user-select: none; /* Chrome/Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+ */

    /* Rules below not implemented in browsers yet */
    user-select: none;
}

ul {
    padding:0;
}

nav li{
    display: inline-block;
    list-style: none;
    margin:0px;
    padding:12px;
    font-size: 10pt;
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-color: #ffffff;
}

nav li a{
    display: block;
    width: 70px;
    padding: 5px 15px;
    text-decoration: none;
    border: 2px solid;
    border-radius: 12px;
    
}

nav a:hover, nav a:focus {
    color: #fff;
}

nav a:active {
    
}

#tilesContainer {
  background: black;
}

.aside-1 {
  background: gold;
}

.aside-2 {
  background: hotpink;
}

body {
    /*background: lightblue;
    padding: 2em; */
}




/*The tiles*/
#tile1{
    background: #ff33cc;
}

#tile2{
    background: #00ccff;
}

#tile3{
    background: #ff9900;
}

#tile4{
    background: #33cc00;
}

#tile5{
    background: #ffcc00;
}

#tile6{
    background: #cc00ff;
}

#tile7{
    background: #ffffff;
}

#tile8{
    background: #ff0066;
}

#branding{
    
}

/*
@media all and (min-width: 600px) {
  .aside { flex: 1 auto; }
}

@media all and (min-width: 800px) {
  .main    { flex: 3 0px; }
  .aside-1 { order: 1; } 
  .main    { order: 2; }
  .aside-2 { order: 3; }
  .footer  { order: 4; }
}
*/

